# StudySync

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
src/: app.py  config.py
src/Chunking/: base.py  factory.py  text_chunker.py
src/Embeddings/: embedding_provider.py
src/LLM/: generator.py  ollama_llm.py
src/Processors/: audio_processor.py  ocr_processor.py  pdf_processor.py  video_processor.py
src/RAG/: rag_engine.py
src/Summarizer/: summarizer.py
src/VectorStore/: chroma_store.py
src/ingestion/: loader.py
testing/audio/: audio_testing.py
testing/chunking/: test_chunking.py
testing/pdfs/: test_pdf_pipeline.py
testing/rag/: testing-rag.py
