[project]
name = "studysync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.1",
    "tqdm>=4.67.1",
]
